# editor-markdown

./: LICENSE  PRIVACY_POLICY.md  README.md  SECURITY_REPORT.md  app.js  package-lock.json  package.json  windows.js
.github/workflows/: build.yml
src/: preload.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: archivos.rs  dialogos.rs  markdown.rs  mod.rs
src/assets/files/: NuevoArchivo.md  algo.md  blckquote.html  blckquote.md  newMarkDown.md  que onda.md  style.css
src/view/: index.html  script.js  style.css
